# RISCV-NN

./: .gitignore  LICENSE  README.md  main.py
benchmarks/: .gitignore  readme.md  readmetemplate.md
benchmarks/amd64/: readme.md  run_all.sh  run_all_amd64.sbatch
benchmarks/amd64/0/: build.amd64.00.sh  main.cpp  scalar.cpp  vectorized.cpp
benchmarks/amd64/00/: 00.cpp  defs.h  main.cpp  readme.md
benchmarks/amd64/02/: 02.cpp  _plot_per_unrollfactors.py  autotune.py  autotune_find_best_comb.py  defs.h  main.cpp  readme.md  runme.sh  runme_plot_per_unrollfactors.sh  scalar.cpp  vectorized.cpp
benchmarks/amd64/03/: defs.h  main.cpp  runme_plot_fixedconf_sweepUF3.sh  runme_plot_per_unrollfactors.sh  runme_plots.sh  scalar.cpp
benchmarks/amd64/07/: autotune.py  defs.h  main.cpp  readme.md  runme.sh  vectorized.cpp
benchmarks/amd64/08/: defs.h  main.cpp  runme.sh  vectorized.cpp
benchmarks/amd64/10/: defs.h  main.cpp  runme.sh  vectorized.cpp
benchmarks/amd64/2/: defs.h  main.cpp  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/amd64/3/: defs.h  main.cpp  readme.md  runme_plots.sh  scalar.cpp  vectorized.cpp
benchmarks/amd64/7/: defs.h  main.cpp  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/amd64/8/: defs.h  main.cpp  readme.md  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/common/: autotune_find_best_comb.py  codebook.h  common01.h  common02.h  plot.bench_01_02.py  plot.bench_03.py  ranges.matmul.sh  runme.matmul.any.sh  timer_stats.py  utils.bash  utils.py
benchmarks/common/python/: autotune.py  autotune_find_best_comb.py  plot.bench_01_02.py  plot.bench_03.py  plot.speedups.py
benchmarks/common/python/parsing/: codebook.py  lamda_funcs.py  parse.py  timer_stats.py  utils.py
benchmarks/cuda/04/: CMakeLists.txt  CRandFiller.h  CTensor.h  build.cuda.00.sh  cnpy.h  defs.h  main.cpp
benchmarks/cuda/04/kernels/1/: kernel.h
benchmarks/cuda/4/: common_cuda.h  main.cpp
benchmarks/cuda/4/kernels/1/: kernel.cu
benchmarks/gpu_cuda/9/: .gitignore  CMakeLists.txt  CRandFiller.h  CTensor.h  autotuner.py  autotuner_convergence.py  cnpy.cpp  kernels.cu  kernels.h  main.cpp  plot.speedups.gpu.cuda.py  readme.md
benchmarks/gpu_cuda/9/python/: autotuner.py  autotuner_convergence.py
benchmarks/riscv/: run_all.sh
benchmarks/riscv/01/: 01.cpp  _plot_per_unrollfactors.py  defs.h  main.cpp  readme.md  runme.sh  runme_plot_per_unrollfactors.sh  scalar.cpp  vectorized.cpp
benchmarks/riscv/05/: defs.h  main.cpp  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/riscv/06/: build.riscv.00.sh  defs.h  main.cpp  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/riscv/1/: defs.h  main.cpp  readme.md  runme.sh  runme_plot_per_unrollfactors.sh  scalar.cpp  vectorized.cpp
benchmarks/riscv/5/: defs.h  main.cpp  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/riscv/6/: defs.h  main.cpp  readme.md  runme.sh  scalar.cpp  vectorized.cpp
benchmarks/scripts/: build.amd64.00.sh  build.cuda.00.sh  build.riscv.00.sh  deps.amd64.sh
data/models/: tinyonnx3.onnx
docs/: spacemit_k1_device_tree.md
iree/: environment.yml  prep.sh  run.tinyonnx3.sh
quantization/: .gitignore
quantization/quantizers/deepshift-quant/: cifar10.py  customized_models.py  mnist.py
quantization/quantizers/deepshift-quant/deepshift/: convert.py  modules.py  modules_q.py  ste.py  utils.py
quantization/quantizers/denseshift-quant/: dsconv2d_8bits.py  formula.py  resnet.py
quantization/recipe/: resnet18_cifar10_deepshift.py  resnet18_cifar10_s3_8bit.py
quantization/utils/: common.py
quantizers/deepshift-quant/: cifar10.py  readme.md
quantizers/denseshift-quant/: dsconv2d_3bits.py  dsconv2d_8bits.py  formula.py  main.py  readme.md
quantizers/s3-quant/: formula.py  main.py  readme.md  resnet.py  s8conv2dshift.py
recipe/: resnet18_cifar10_deepshift.py  resnet18_cifar10_denseshift_8bits.py  resnet18_cifar10_s38bit.py
utils/: common.py
